chore: upgrade to Java 21 (#753)
Closes: MSEARCH-969